# regis

./: .gitignore  CLAUDE.md  LICENSE  README.md  TESTING.md  config.json  index.html  main.js  package-lock.json  package.json  playwright.config.js  servers.json  vitest.config.js
config/: default.json  user.json  user.json.template
media/: icon-apple.pxd
media/icon-apple.icon/: icon.json
playwright-report/: index.html
src/: index.html  logger.js  main.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: boundary.rs  config.rs  lib.rs  logger.rs  main.rs  oidc.rs  tray.rs
src-tauri/tests/: integration_test.rs
src/modules/: auth-manager.js  server-manager.js  target-manager.js  utils.js
src/styles/: main.css
test-results/: results.json
tests/: setup.js
tests/e2e/: app.spec.js  global-setup.js  global-teardown.js  tauri-integration.spec.js
tests/unit/: config.test.js  modules.test.js
