[package]
name = "regis"
version = "0.1.0"
description = "A lightweight Boundary GUI client"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.0"
keyring = "2.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
url = "2.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
